fix: 557 - section alignment issue

--- a/src/widgets/numbers/ui/numbers/numbers.module.scss
+++ b/src/widgets/numbers/ui/numbers/numbers.module.scss
@@ -10,7 +10,7 @@
     position: absolute;
     z-index: -1;
     top: -40px;
-    left: 36px;
+    left: 0;
 
     width: 90%;
     max-width: 950px;
